gitops/apps/task-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-api
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: taskapi.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: task-api
            port:
              number: 80
